[gd_scene load_steps=7 format=3 uid="uid://bvqx7m8n5k2pu"]

[ext_resource type="Script" path="res://scripts/game_field.gd" id="1_field"]
[ext_resource type="PackedScene" uid="uid://cpfpxwhgfj47w" path="res://scenes/player/player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://c7akwu0yvebfp" path="res://scenes/ball.tscn" id="3_ball"]
[ext_resource type="PackedScene" uid="uid://d2vx8qkm3tny7" path="res://scenes/goals/goal.tscn" id="4_goal"]
[ext_resource type="Script" path="res://scripts/center_circle_visual.gd" id="5_circle"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall"]
size = Vector2(1280, 40)

[node name="GameField" type="Node2D"]
script = ExtResource("1_field")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.15, 0.4, 0.15, 1)

[node name="CenterLine" type="ColorRect" parent="."]
offset_left = 637.0
offset_right = 643.0
offset_bottom = 720.0
color = Color(1, 1, 1, 0.3)

[node name="CenterCircle" type="Node2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("5_circle")

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]
position = Vector2(640, 20)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
shape = SubResource("RectangleShape2D_wall")

[node name="Visual" type="ColorRect" parent="Walls/TopWall"]
offset_left = -640.0
offset_top = -20.0
offset_right = 640.0
offset_bottom = 20.0
color = Color(0.3, 0.3, 0.3, 1)

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2(640, 700)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
shape = SubResource("RectangleShape2D_wall")

[node name="Visual" type="ColorRect" parent="Walls/BottomWall"]
offset_left = -640.0
offset_top = -20.0
offset_right = 640.0
offset_bottom = 20.0
color = Color(0.3, 0.3, 0.3, 1)

[node name="GoalLeft" parent="." instance=ExtResource("4_goal")]
position = Vector2(0, 360)
goal_team = 1

[node name="GoalRight" parent="." instance=ExtResource("4_goal")]
position = Vector2(1280, 360)
goal_team = 2

[node name="Ball" parent="." instance=ExtResource("3_ball")]
position = Vector2(640, 360)

[node name="Player1" parent="." instance=ExtResource("2_player")]
position = Vector2(320, 360)
player_id = "player1"
team = 1

[node name="Player2" parent="." instance=ExtResource("2_player")]
position = Vector2(960, 360)
player_id = "player2"
team = 2
